--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <body>
     <header class="header">
       <a href="/" class="logo">
-        <svg viewbox="0 0 38 46" xmlns="http://www.w3.org/2000/svg">
+        <img src="devops-logo.webp" width="60" />
+        <!-- <svg viewbox="0 0 38 46" xmlns="http://www.w3.org/2000/svg">
           <path d="M19 2L1 13V33L19 44L37 33V13L19 2Z" stroke-width="2"/>
           <path d="M18.9141 17.041L14.207 30H12.2832L17.7031 15.7812H18.9434L18.9141 17.041ZM22.8594 30L18.1426 17.041L18.1133 15.7812H19.3535L24.793 30H22.8594ZM22.6152 24.7363V26.2793H14.627V24.7363H22.6152Z" fill="#64e1ff"/>
-        </svg>
+        </svg> -->
       </a>
       <nav class="nav">
         <ul>
